# codingcli

./: .gitignore  README.md  pyproject.toml  学习方案.md  技术实现方案.md
paicli_py/: __main__.py
paicli_py/agent/: agent.py  agent_budget.py  agent_role.py  orchestrator.py  plan_execute.py  stream_renderer.py  sub_agent.py
paicli_py/browser/: audit_metadata.py  check_result.py  connectivity_check.py  connector.py  guard.py  mode.py  sensitive_policy.py  session.py
paicli_py/cli/: completer.py  highlighter.py  history.py  main.py  parser.py  project_memory_initializer.py  review_input_parser.py  skill_handler.py
paicli_py/config/: config.py
paicli_py/context/: __init__.py  formatter.py  profile.py
paicli_py/hitl/: approval_request.py  hitl_handler.py  renderer_handler.py  switchable_handler.py  terminal_handler.py  tool_registry.py
paicli_py/image/: clipboard.py  parser.py
paicli_py/llm/: __init__.py  base.py  client.py  factory.py  models.py
paicli_py/lsp/: diagnostic.py  formatter.py  manager.py  report.py  severity.py
paicli_py/mcp/: __init__.py  _notifications_core.py  _resources_core.py  _transport_legacy.py  client.py  config.py  config_loader.py  jsonrpc.py  jsonrpc_error.py  manager.py  mcp_capabilities.py  mcp_config_file.py  mcp_initialize_request.py  mcp_tool_descriptor.py  mention.py  mention_completer.py  mention_expander.py  mention_parser.py  notifications.py  protocol.py  resource_tool.py  resources.py  schema_sanitizer.py  server.py  transport.py  transport_http.py  transport_stdio.py
paicli_py/memory/: compressor.py  conversation.py  history_compactor.py  long_term.py  manager.py  memory_entry.py  protocol.py  query_tokenizer.py  retriever.py  token_budget.py
paicli_py/plan/: __init__.py  execution_plan.py  planner.py
paicli_py/policy/: __init__.py  audit_log.py  path_guard.py
paicli_py/prompt/: __init__.py  assembler.py  context.py  mode.py  project_memory_loader.py  repository.py
paicli_py/rag/: analyzer.py  chunker.py  embedding.py  formatter.py  index.py  query_tokenizer.py  retriever.py  vector_store.py
paicli_py/render/: factory.py  inline_renderer.py  plain.py  protocol.py
paicli_py/runtime/: cancellation.py
paicli_py/skill/: __init__.py  builtin_extractor.py  context_buffer.py  formatter.py  frontmatter_parser.py  registry.py  skill.py  state_store.py
paicli_py/snapshot/: __init__.py  config.py  phase.py  service.py  side_git.py  turn_snapshot.py
paicli_py/tool/: java_search_engine.py  registry.py  ripgrep_engine.py  search_engine.py
paicli_py/tui/: __init__.py  bootstrap.py  center_pane.py  code_highlighter.py  history_panel.py  hitl_panel.py  input_bar.py  lanterna_renderer.py  session_controller.py  window.py  (+1 more)
suncli_py/: __init__.py  __main__.py
tests/: test_config.py  test_memory.py  test_refactor_agent_chat.py  test_refactor_agent_java_ast.py  test_refactor_agent_java_context.py  test_refactor_agent_llm_agent.py  test_refactor_agent_multi_agent.py  test_refactor_agent_phase_five_six.py  test_refactor_agent_phase_four.py  test_refactor_agent_phase_one.py  test_refactor_agent_phase_three.py  test_refactor_agent_phase_two.py  test_refactor_agent_pre_modification.py
(+292 files in other folders)
