[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paicli-py"
version = "16.1.0"
description = "PaiCLI - A terminal-native Agent IDE (Python port)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PaiCLI Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "jieba>=0.42.0",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "dulwich>=0.22.0",
    "qrcode>=8.0.0",
    "textual>=2.1.0",
    "click>=8.1.0",
    "arrow>=1.3.0",
    "pillow>=11.0.0",
    "tree-sitter>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpserver>=1.1.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[project.scripts]
paicli = "paicli_py.cli.main:main"

[tool.setuptools.packages.find]
include = ["paicli_py*"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
