[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paicli-py"
version = "16.1.0"
description = "LLM-driven Java code smell detection and safe refactoring agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "PaiCLI Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.0",
]

[project.scripts]
refactor-agent = "suncli_py.refactor_agent.interface.cli:main"

[tool.setuptools.packages.find]
include = ["suncli_py*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
